--- a/index.html
+++ b/index.html
@@ -33,54 +33,54 @@
 		<h6>Click the calendar icon to add a new event</h6>
 		<h6>Double click the calendar icon to remove the event</h6>
 	</div>
+<!--Time Containers-->
 	<div class="d-flex">
 		<div class="p-2 time-box border">9am</div>
 		<input  name="1" data-name="9am" id="1" type="text" placeholder="add event"
-		        class=" text-light border p-2 flex-fill">
+		        class="text-light border p-2 flex-fill">
 		<button name="1" type="button"><img src="assets/images/icons8-event-26.png"></button>
 	</div>
 	<div class="d-flex">
 		<div class="p-2 time-box border">10am</div>
-		<input id="2" type="text"  placeholder="add event" class="border p-2 flex-fill">
+		<input name="2" id="2" type="text"  placeholder="add event" class="text-light border p-2 flex-fill">
 		<button name="2" type="button"><img src="assets/images/icons8-event-26.png"></button>
 	</div>
 	<div class="d-flex">
 		<div class="p-2 time-box border">11am</div>
-		<input id="3" type="text" placeholder="add event" class="border p-2 flex-fill">
+		<input name="3" id="3" type="text" placeholder="add event" class="text-light border p-2 flex-fill">
 		<button name="3" type="button"><img src="assets/images/icons8-event-26.png"></button>
 	</div>
 	<div class="d-flex flex-wrap">
 		<div class="p-2 time-box border">12pm</div>
-		<input id="4" type="text" placeholder="add event" class="border p-2 flex-fill">
+		<input name="4" id="4" type="text" placeholder="add event" class="text-light border p-2 flex-fill">
 		<button name="4" type="button"><img src="assets/images/icons8-event-26.png"></button>
 	</div>
 	<div class="d-flex flex-wrap">
 		<div class="p-2 time-box border">1pm</div>
-		<input id="5" type="text" placeholder="add event" class="border p-2 flex-fill">
+		<input name=5" id="5" type="text" placeholder="add event" class="text-light border p-2 flex-fill">
 		<button name="5" type="button"><img src="assets/images/icons8-event-26.png"></button>
 	</div>
 	<div class="d-flex flex-wrap">
 		<div class="p-2 time-box border">2pm</div>
-		<input id="6" type="text" placeholder="add event" class="border p-2 flex-fill">
+		<input name="6" id="6" type="text" placeholder="add event" class="text-light border p-2 flex-fill">
 		<button name="6" type="button"><img src="assets/images/icons8-event-26.png"></button>
 	</div>
 	<div class="d-flex flex-wrap">
 		<div class="p-2 time-box border">3pm</div>
-		<input id="7" type="text" placeholder="add event" class="border p-2 flex-fill">
+		<input name="7" id="7" type="text" placeholder="add event" class="text-light border p-2 flex-fill">
 		<button name="7" type="button"><img src="assets/images/icons8-event-26.png"></button>
 	</div>
 	<div class="d-flex flex-wrap">
 		<div class="p-2 time-box border">4pm</div>
-		<input id="8" type="text" placeholder="add event" class="border p-2 flex-fill">
+		<input name="8" id="8" type="text" placeholder="add event" class="text-light border p-2 flex-fill">
 		<button name="8" type="button"><img src="assets/images/icons8-event-26.png"></button>
 	</div>
 	<div class="d-flex flex-wrap">
 		<div class="p-2 time-box border">5pm</div>
-		<input id="9" type="text" placeholder="add event" class="border p-2 flex-fill">
+		<input name="9" id="9" type="text" placeholder="add event" class="text-light border p-2 flex-fill">
 		<button name="9" type="button"><img src="assets/images/icons8-event-26.png"></button>
 	</div>
 </div>
-
 
 <script src="assets/script.js  "></script>
 
